--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,7 +12,8 @@
     "@aiostreams/types": "^1.0.0",
     "next": "15.1.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
