--- a/packages/addon/package.json
+++ b/packages/addon/package.json
@@ -10,7 +10,7 @@
     "start": "node dist/server.js",
     "start:dev": "cross-env NODE_ENV=dev tsx watch src/server.ts"
   },
-  "description": "Ps",
+  "description": "Combine all your streams into one addon and display them with consistent formatting, sorting, and filtering.",
   "dependencies": {
     "@aiostreams/wrappers": "^1.0.0",
     "@aiostreams/formatters": "^1.0.0",
