chore: set version to 0.0.0

--- a/packages/cloudflare-workers/package.json
+++ b/packages/cloudflare-workers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aiostreams/cloudflare-worker",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "scripts": {
     "test": "vitest run --passWithNoTests",
     "dev": "wrangler dev src/index.ts",
@@ -8,7 +8,7 @@
     "build": "exit 0"
   },
   "dependencies": {
-    "@aiostreams/addon": "^1.0.0",
+    "@aiostreams/addon": "0.0.0",
     "hono": "^4.5.3",
     "hono-stremio": "^0.1.1"
   },
