--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aiostreams/parser",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "main": "./dist/index.js",
   "scripts": {
     "test": "vitest run --passWithNoTests",
@@ -8,6 +8,6 @@
   },
   "description": "Library to parse a torrent filename ",
   "dependencies": {
-    "@aiostreams/types": "0.0.0"
+    "@aiostreams/types": "^1.0.0"
   }
 }
