--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -27,5 +27,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/AIOStreams:${{ github.ref_name }}
-            ghcr.io/${{ github.repository_owner }}/AIOStreams:latest
+            ghcr.io/${{ github.repository_owner }}/aiostreams:${{ github.ref_name }}
+            ghcr.io/${{ github.repository_owner }}/aiostreams:latest
