--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "start:addon:dev": "npm -w packages/addon run start:dev",
     "start:cloudflare-worker:dev": "npm -w packages/cloudflare-worker run dev",
     "deploy:beamup": "beamup",
-    "deploy:cloudflare-worker": "npm -w packages/cloudflare-worker run deploy",
-    "version": "npm version $npm_package_version --workspaces && git add **/package.json"
+    "deploy:cloudflare-worker": "npm -w packages/cloudflare-worker run deploy"
   },
   "author": "Viren070",
   "license": "MIT",
