chore(frontend): update tsconfig and package files

--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -28,6 +28,9 @@
     },
     {
       "path": "../addon"
+    },
+    {
+      "path": "../formatters"
     }
   ],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
