--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@aiostreams/types": "^1.0.0",
+    "@aiostreams/formatters": "^1.0.0",
+    "@aiostreams/addon": "^1.0.0",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
