--- a/packages/wrappers/package.json
+++ b/packages/wrappers/package.json
@@ -9,6 +9,7 @@
   "description": "Library with wrappers for different addons",
   "devDependencies": {
     "@aiostreams/parser": "^1.0.0",
-    "@aiostreams/types": "^1.0.0"
+    "@aiostreams/types": "^1.0.0",
+    "@aiostreams/addon": "^1.0.0"
   }
 }
