--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -31,6 +31,9 @@
     },
     {
       "path": "../formatters"
+    },
+    {
+      "path": "../wrappers"
     }
   ],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
