--- a/packages/addon/package.json
+++ b/packages/addon/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@aiostreams/formatters": "^1.0.0",
     "@aiostreams/types": "^1.0.0",
+    "@aiostreams/utils": "^1.0.0",
     "@aiostreams/wrappers": "^1.0.0",
+    "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2"
   },
