--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -34,6 +34,9 @@
     },
     {
       "path": "../wrappers"
+    },
+    {
+      "path": "../utils"
     }
   ],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
