--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,6 +16,7 @@
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-select": "^5.9.0",
     "react-toastify": "^11.0.2"
   },
   "devDependencies": {
