fix(ci): only run test build when changes are made to appropriate files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,21 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'packages/**'
+      - 'package-lock.json'
+      - 'package.json'
+      - 'tsconfig.json'
+      - 'tsconfig.base.json'
   pull_request:
     branches: 
       - main
+    paths:
+      - 'packages/**'
+      - 'package-lock.json'
+      - 'package.json'
+      - 'tsconfig.json'
+      - 'tsconfig.base.json'
 
 jobs:
   test:
