--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -56,7 +56,7 @@ body:
     id: '4'
     attributes:
       label: Bug Description / Steps to Reproduce
-      description: Precisely describe the bug you encountered and the steps to reproduce it. Avoid vague descriptions. Include screenshots of your configuration if applicable.
+      description: Precisely describe the bug you encountered and the steps to reproduce it. Avoid vague descriptions.
     validations:
       required: true
   - type: textarea
@@ -68,7 +68,7 @@ body:
     id: '6'
     attributes:
       label: Screenshots
-      description: If applicable, add screenshots of the bug
+      description: If applicable, add screenshots of the bug. Include screenshots of your configuration if applicable.
   - type: checkboxes
     id: '8'
     attributes:
