--- a/packages/cloudflare-worker/wrangler.toml
+++ b/packages/cloudflare-worker/wrangler.toml
@@ -1,5 +1,5 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "aiostreams-cloudflare-workers"
+name = "aiostreams"
 main = "src/index.ts"
 compatibility_date = "2024-12-24"
 compatibility_flags = ["nodejs_compat"]
