--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,2 +1,6 @@
 blank_issues_enabled: false
+contact_links:
+  - name: AIOStreams Community Support
+    url: https://github.com/Viren070/AIOStreams/discussions/categories/help
+    about: If you need help, create a new post here with your question.
 
