--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -4,23 +4,16 @@ title: 'bug: '
 labels:
   - bug
 body:
-  - type: checkboxes
-    id: '1'
-    attributes:
-      label: Checklist
-      description: Please follow the general troubleshooting steps first
-      options:
-        - label: >-
-            I have checked open and closed [issues](https://github.com/Viren070/AIOStreams/issues)
-          required: true
   - type: dropdown
     id: '9'
     attributes:
       label: Deployment Method
-      description: Enter how you are using the addon
+      description: How are you hosting the addon?
       options:
         - Public ElfHosted Instance
         - Private ElfHosted Instance
+        - Cloudflare Workers
+        - VPS
         - Other, specify at description
     validations:
       required: true
@@ -28,8 +21,8 @@ body:
     id: '10'
     attributes:
       label: Addon Version
-      description: What version of the addon were you using. If you were using Hugging Face, Render, or Cloudflare Workers, which commit did you build off, or around what time did you deploy
-      placeholder: v1.7.4
+      description: What version of the addon are you using, or what was the commit that your deployment was built off of?
+      placeholder: v1.13.8
     validations:
       required: true
   - type: dropdown
@@ -38,9 +31,11 @@ body:
       label: Bug Area
       description: Select what area of the addon this issue affects
       options:
-        - Build Proces
-        - Configuring the addon
-        - Using the addon
+        - Deploying
+        - Configuring
+        - Installing
+        - Obtaining streams.
+        - Playback
     validations:
       required: true
   - type: input
@@ -53,7 +48,7 @@ body:
     id: '4'
     attributes:
       label: Bug Description / Steps to Reproduce
-      description: Precisely describe the bug you encountered and the steps to reproduce it. Avoid vague descriptions.
+      description: Precisely describe the bug you encountered and the steps to reproduce it. Avoid vague descriptions. Include relevant details - such as if you were using MediaFlow. 
     validations:
       required: true
   - type: textarea
@@ -61,11 +56,13 @@ body:
     attributes:
       label: Expected Behavior
       description: Describe what you expected to happen.
+    validations:
+      required: true
   - type: textarea
     id: '6'
     attributes:
       label: Screenshots
-      description: If applicable, add screenshots of the bug. Include screenshots of your configuration if applicable.
+      description: If applicable, add screenshots of the bug and your configuration.
   - type: checkboxes
     id: '8'
     attributes:
@@ -78,4 +75,26 @@ body:
         - label: >-
             If applicable, I have included MediaFlow logs
           required: false
+  - type: checkboxes
+    id: '9'
+    attributes:
+      label: Issue Checklist
+      description: Confirm that you have understood and followed these requirements: 
+      options:
+        - label: >-
+            I have written a short but informative title that clearly describes the issue.
+          required: true
+        - label: >- 
+            I have given clear and descriptive steps to reproduce the issue.
+          required: true
+        - label: >- 
+            I have checked open and closed issues and confirmed that this is not a duplicate of another issue.
+          required: true
+        - label: >- 
+            I have filled out all of the requested information adequately. 
+          required: true
+        - label: >- 
+            I am using the [latest version](https://github.com/Viren070/AIOStreams/releases/latest). 
+          required: true
+            
 
