feat: use winston for logging

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -8,6 +8,7 @@
   },
   "description": "Library to parse a torrent filename ",
   "dependencies": {
-    "jsoncrush": "^1.1.8"
+    "jsoncrush": "^1.1.8",
+    "winston": "^3.17.0"
   }
 }
